fix hero image in responsive

--- a/portofolio/bmi-calculator.html
+++ b/portofolio/bmi-calculator.html
@@ -22,10 +22,10 @@
           <a href="../index.html">home</a>
         </li>
         <li>
-          <a href="about.html">about</a>
+          <a href="../about.html">about</a>
         </li>
         <li>
-          <a href="portofolio.html" class="active">portofolio</a>
+          <a href="../portofolio.html" class="active">portofolio</a>
         </li>
         <li>
           <a href="https://justhaizathings.blogspot.com/" target="_blank">blog</a>
